fixed collapsable menu, changed html to fix validation issue, fixed image blurriness on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,7 @@ option{
       font-size: 1.1rem;
     }
     .carousel-headings{
-      font-size:1.1rem;
+      font-size:0.95rem;
     }
     .img-movies{
       padding-bottom: 10px;
@@ -254,7 +254,7 @@ option{
    
 
     .carousel-image{
-      height: 80vh;
+      height: 100%;
     }
 
     #News{
@@ -268,6 +268,10 @@ option{
     #About, #Movies, #Registration, #News {
       padding: 10px 30px 10px 30px;
   }
+.carousel-control-next, .carousel-control-prev{
+  visibility: hidden;
+}
+  
 }
 
 @media (min-width: 768px) {
